# georsct

./: .gitattributes  .gitignore  2-Three findings.txt  3-prep-for-iclr.txt  4-adt status - repos pushed cleanly.txt  5-cert blockers.txt  6-flood-teach.txt  CLAUDE.md  FAILURE_TAXONOMY.yaml  LICENSE  MISSING_INVENTORY.md  MISSING_INVENTORY_BLOCKERS.md  README.md  REPO_SPLIT.md  compat.txt  croissant.json  pyproject.toml  qual.txt  requirements.txt  trace_vocab_terminus.py  turbulence.txt
V3/: georsct_croissant_neurips_compliant.json  references.bib
V4/: checklist.tex  combine_georsct.tex  references.bib
V5/: combine_georsct.tex
V5-NeuRIPS_V5b/: AC_CLAIMS.md  AC_KAPPA_REGISTRY.md  AC_SIX_KAPPAS.md  metric_implementation_gearbox.md
V6-SIGSPATIAL/: floodcaster_demo.tex  floodrsct_front.tex  floodrsct_schedule.md
code/: figures.py  inference.py  quickstart.py
data/: README.md
data/floodrsct/src/: pyproject.toml
data/floodrsct/src/floodcaster/adapters/outbound/deckgl/: interactive_map_renderer.py
data/floodrsct/src/floodcaster/adapters/outbound/fema/: nfhl_adapter.py
data/floodrsct/src/floodcaster/adapters/outbound/noaa/: mrms_adapter.py
data/floodrsct/src/floodcaster/adapters/outbound/postgis/: postgis_boundary_source.py
data/floodrsct/src/floodcaster/adapters/outbound/s3/: s3_certificate_store.py
data/floodrsct/src/floodcaster/adapters/outbound/svg/: spatial_grounding_renderer.py
data/floodrsct/src/floodcaster/application/use_cases/: build_event_dataset.py  compute_spatial_probe.py
data/floodrsct/src/floodcaster/domain/: exposure.py  hazard_evidence.py  readiness_certificate.py  residual.py  scenario.py
data/floodrsct/src/floodcaster/ports/: claims_source.py  exposure_source.py  map_renderer.py  scenario_registry.py  spatial_graph_source.py
data/floodrsct/src/georsct/: __init__.py
data/floodrsct/src/georsct/adapters/outbound/faiss/: __init__.py
data/floodrsct/src/georsct/adapters/outbound/json/: __init__.py
data/floodrsct/src/georsct/adapters/outbound/pgvector/: __init__.py
data/floodrsct/src/georsct/application/use_cases/: classify_readiness_zone.py  score_quality_compatibility_turbulence.py
data/floodrsct/src/georsct/domain/: compatibility.py  quality.py
data/floodrsct/src/georsct/ports/: certificate_repository.py  embedding_source.py  spatial_metric_source.py
db/: QUERIES.md
(+1175 files in other folders)
