[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsct"
version = "0.3.0"
description = "RSCT experiment certificates: R/S/N decomposition for geospatial context quality"
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
geo = [
    "scipy>=1.10",
    "pandas>=2.0",
    "libpysal>=4.7",
]
healthcheck = [
    "yrsn-controlplane",
]
audit = [
    "pyyaml>=6.0",
    "boto3>=1.26",
    "swarm-auth",
]
viz = [
    "matplotlib>=3.7",
    "yrsn-analysis",
]

[tool.setuptools.packages.find]
include = ["rsct*", "georsct*"]
