[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "floodcaster-georsct"
version = "0.1.0"
description = "Hexagonal architecture for flood readiness certification (RSCT)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "fiona>=1.9",
    "libpysal>=4.9",
    "esda>=2.5",
    "spreg>=1.4",
    "mgwr>=2.2",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
viz = [
    "folium>=0.15",
    "plotly>=5.18",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["floodcaster*", "georsct*"]
